Compute residuals with forecast

--- a/docs/examples/e01.ipynb
+++ b/docs/examples/e01.ipynb
@@ -54,28 +54,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2024-08-02 13:24:00--  https://github.com/oasci/vaxstats/raw/main/tests/files/example.xlsx\n",
-      "Resolving github.com (github.com)... 140.82.113.3\n",
-      "Connecting to github.com (github.com)|140.82.113.3|:443... connected.\n",
+      "--2024-08-09 08:29:44--  https://github.com/oasci/vaxstats/raw/main/tests/files/example.xlsx\n",
+      "Resolving github.com (github.com)... 140.82.114.3\n",
+      "Connecting to github.com (github.com)|140.82.114.3|:443... connected.\n",
       "HTTP request sent, awaiting response... 302 Found\n",
       "Location: https://raw.githubusercontent.com/oasci/vaxstats/main/tests/files/example.xlsx [following]\n",
-      "--2024-08-02 13:24:00--  https://raw.githubusercontent.com/oasci/vaxstats/main/tests/files/example.xlsx\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.111.133, 185.199.109.133, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
+      "--2024-08-09 08:29:44--  https://raw.githubusercontent.com/oasci/vaxstats/main/tests/files/example.xlsx\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.110.133, 185.199.111.133, ...\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 1411574 (1.3M) [application/octet-stream]\n",
       "Saving to: ‘example.xlsx’\n",
       "\n",
-      "example.xlsx        100%[===================>]   1.35M  --.-KB/s    in 0.1s    \n",
+      "example.xlsx        100%[===================>]   1.35M  --.-KB/s    in 0.05s   \n",
       "\n",
-      "2024-08-02 13:24:01 (9.13 MB/s) - ‘example.xlsx’ saved [1411574/1411574]\n",
+      "2024-08-09 08:29:44 (27.5 MB/s) - ‘example.xlsx’ saved [1411574/1411574]\n",
       "\n"
      ]
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
        "Text(0.5, 0, 'Time [days]')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -352,31 +352,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/alex/miniconda3/envs/vaxstats-dev/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shape: (2_721, 4)\n",
-      "┌───────────┬─────────────────────┬────────┬───────────┐\n",
-      "│ unique_id ┆ ds                  ┆ y      ┆ y_hat     │\n",
-      "│ ---       ┆ ---                 ┆ ---    ┆ ---       │\n",
-      "│ i32       ┆ str                 ┆ f64    ┆ f64       │\n",
-      "╞═══════════╪═════════════════════╪════════╪═══════════╡\n",
-      "│ 0         ┆ 2023-08-10 12:31:34 ┆ 39.096 ┆ 39.056904 │\n",
-      "│ 0         ┆ 2023-08-10 12:46:34 ┆ 38.907 ┆ 38.868093 │\n",
-      "│ 0         ┆ 2023-08-10 13:01:33 ┆ 38.822 ┆ 38.783178 │\n",
-      "│ 0         ┆ 2023-08-10 13:02:34 ┆ 38.7   ┆ 38.6613   │\n",
-      "│ 0         ┆ 2023-08-10 13:46:33 ┆ 39.118 ┆ 39.078882 │\n",
-      "│ …         ┆ …                   ┆ …      ┆ …         │\n",
-      "│ 0         ┆ 2023-09-08 08:46:34 ┆ 38.675 ┆ 37.278954 │\n",
-      "│ 0         ┆ 2023-09-08 09:01:34 ┆ 38.539 ┆ 37.236637 │\n",
-      "│ 0         ┆ 2023-09-08 09:16:33 ┆ 38.42  ┆ 37.209717 │\n",
-      "│ 0         ┆ 2023-09-08 09:31:34 ┆ 38.404 ┆ 37.196992 │\n",
-      "│ 0         ┆ 2023-09-08 09:44:12 ┆ 38.556 ┆ 37.132597 │\n",
-      "└───────────┴─────────────────────┴────────┴───────────┘\n"
+      "shape: (2_721, 5)\n",
+      "┌───────────┬─────────────────────┬────────┬───────────┬──────────┐\n",
+      "│ unique_id ┆ ds                  ┆ y      ┆ y_hat     ┆ residual │\n",
+      "│ ---       ┆ ---                 ┆ ---    ┆ ---       ┆ ---      │\n",
+      "│ i32       ┆ str                 ┆ f64    ┆ f64       ┆ f64      │\n",
+      "╞═══════════╪═════════════════════╪════════╪═══════════╪══════════╡\n",
+      "│ 0         ┆ 2023-08-10 12:31:34 ┆ 39.096 ┆ 39.056904 ┆ 0.039096 │\n",
+      "│ 0         ┆ 2023-08-10 12:46:34 ┆ 38.907 ┆ 38.868093 ┆ 0.038907 │\n",
+      "│ 0         ┆ 2023-08-10 13:01:33 ┆ 38.822 ┆ 38.783178 ┆ 0.038822 │\n",
+      "│ 0         ┆ 2023-08-10 13:02:34 ┆ 38.7   ┆ 38.6613   ┆ 0.0387   │\n",
+      "│ 0         ┆ 2023-08-10 13:46:33 ┆ 39.118 ┆ 39.078882 ┆ 0.039118 │\n",
+      "│ …         ┆ …                   ┆ …      ┆ …         ┆ …        │\n",
+      "│ 0         ┆ 2023-09-08 08:46:34 ┆ 38.675 ┆ 37.278954 ┆ 1.396046 │\n",
+      "│ 0         ┆ 2023-09-08 09:01:34 ┆ 38.539 ┆ 37.236637 ┆ 1.302363 │\n",
+      "│ 0         ┆ 2023-09-08 09:16:33 ┆ 38.42  ┆ 37.209717 ┆ 1.210283 │\n",
+      "│ 0         ┆ 2023-09-08 09:31:34 ┆ 38.404 ┆ 37.196992 ┆ 1.207008 │\n",
+      "│ 0         ┆ 2023-09-08 09:44:12 ┆ 38.556 ┆ 37.132597 ┆ 1.423403 │\n",
+      "└───────────┴─────────────────────┴────────┴───────────┴──────────┘\n"
      ]
     }
    ],
@@ -399,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +416,7 @@
        "Text(0.5, 0, 'Time [days]')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -443,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -496,9 +504,7 @@
    "source": [
     "import numpy as np\n",
     "from vaxstats.utils import split_df\n",
-    "from vaxstats.stats import add_residuals_col\n",
     "\n",
-    "df_results = add_residuals_col(df_results)\n",
     "df_results_baseline = split_df(df_results, hours=baseline_hours)[0]\n",
     "\n",
     "residuals = df_results_baseline.get_column(\"residual\").to_numpy()\n",
