--- a/docs/examples/e02.md
+++ b/docs/examples/e02.md
@@ -4,7 +4,7 @@ While [E01](../e01) demonstrates a Python-based approach, we demonstrate the com
 
 ## DataFrame
 
-We will assume you already have [`example.xlsx`](https://gitlab.com/oasci/software/vaxstats/-/blob/main/tests/files/example.xlsx?ref_type=heads) in your current work directory; if not, you can get it by running the following bash command.
+We will assume you already have [`example.xlsx`](https://github.com/oasci/software/vaxstats/-/blob/main/tests/files/example.xlsx?ref_type=heads) in your current work directory; if not, you can get it by running the following bash command.
 
 ```bash
 wget https://github.com/oasci/vaxstats/raw/main/tests/files/example.xlsx
